Algorithms/*Python*
Python 2.7.13 (default, May 10 2017, 20:04:28) 
[GCC 6.3.1 20161221 (Red Hat 6.3.1-1)] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> python.el: native completion setup loaded
>>> 12
>>> 0
>>> 0
>>> 0
>>> 2
>>> 0
>>> 0.5
>>> 0.5
>>> 0.0
>>> 0.5
>>> (0.5, 0.3333333333333333, 0.16666666666666666)
>>> Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/smachado/Documents/DjangoFullStackDevCourse/Projectfolder/Algorithms/testes.py", line 4
    n = map(int, '1 3 6 4 6'.strip().split()))
                                             ^
SyntaxError: invalid syntax
>>> [1, 3, 6, 4, 6]
>>> [3]
>>> 3
>>> (3, [-4, 3, -9, 0, 4, 1])
>>> Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/smachado/Documents/DjangoFullStackDevCourse/Projectfolder/Algorithms/testes.py", line 14, in <module>
    print (positive_counter(arr))
  File "/home/smachado/Documents/DjangoFullStackDevCourse/Projectfolder/Algorithms/testes.py", line 3, in positive_counter
    for count in ar:
NameError: global name 'ar' is not defined
>>> 3
>>> Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/smachado/Documents/DjangoFullStackDevCourse/Projectfolder/Algorithms/testes.py", line 29
    print ("teste 1{}\nTeste 2".format(n)
                                        ^
SyntaxError: invalid syntax
>>> teste 13
Teste 2
>>> Positives: 3
Negatives: 2
 Zeros: 1
>>> Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/smachado/Documents/DjangoFullStackDevCourse/Projectfolder/Algorithms/testes.py", line 29
    print ("Positives: {}\nNegatives: {}\n Zeros: {}".format(positivers/6.0, negativers/6.0, zeros/))
                                                                                                   ^
SyntaxError: invalid syntax
>>> Positives: 0.5
Negatives: 0.333333333333
 Zeros: 0.166666666667
>>> 3
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/smachado/Documents/DjangoFullStackDevCourse/Projectfolder/Algorithms/testes.py", line 22, in <module>
    n = int(raw_input().strip)
TypeError: int() argument must be a string or a number, not 'builtin_function_or_method'
>>> 3
-4 -2 -1 1 2 3 0
Positives: 0.5
Negatives: 0.5
 Zeros: 0.166666666667
>>> 3
-4 -2 1 2 3 0
Positives: 0.5
Negatives: 0.333333333333
 Zeros: 0.166666666667
>>> Positives: 0.5
Negatives: 0.333333333333
 Zeros: 0.166666666667
>>> Positives: 0.5
Negatives: 0.333333333333
Zeros: 0.166666666667
>>> Positives: 0
Negatives: 0
Zeros: 0
>>> Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/smachado/Documents/DjangoFullStackDevCourse/Projectfolder/Algorithms/testes.py", line 30
    positivers/.float(n),
               ^
SyntaxError: invalid syntax
>>> Positives: 0.5
Negatives: 0
Zeros: 0
>>> Positives: 0.5
Negatives: 0.333333333333
Zeros: 0
>>> Positives: 0.5
Negatives: 0.333333333333
Zeros: 0.166666666667
>>> 0.5
0.333333333333\0.166666666667
>>> 0.5
0.333333333333
0.166666666667
>>> Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/smachado/Documents/DjangoFullStackDevCourse/Projectfolder/Algorithms/testes.py", line 32, in <module>
    zeros/float(n))
ValueError: cannot switch from manual field specification to automatic field numbering
>>> 0.50
0.50
0.50
>>> 0.500000
0.500000
0.500000
>>> 0.5
0.333333333333
0.166666666667
>>> print zeros
1
>>> print ('{:.6f}'.format(zeros))
1.000000
>>> print ('{:.6f}'.format(zeros/float(6)))